--- a/composer.json
+++ b/composer.json
@@ -73,48 +73,56 @@
         "php": "^8.1",
         "atomiks/tippyjs": "^6.3.7",
         "biati-digital/glightbox": "^3.2.0",
-        "composer/installers": "^2",
-        "cweagans/composer-patches": "^1.7",
+        "composer/installers": "^2.2.0",
+        "cweagans/composer-patches": "^1.7.2",
         "desandro/masonry": "^4.4.2",
-        "drupal/allowed_formats": "^1.5",
-        "drupal/block_permissions": "^1.2",
-        "drupal/captcha": "^1.3",
-        "drupal/cookies": "^1.0",
-        "drupal/core-composer-scaffold": "^9.5",
-        "drupal/core-recommended": "^9.5",
-        "drupal/crop": "^2.2",
-        "drupal/double_field": "^4.0",
+        "drupal/allowed_formats": "^1.5.0",
+        "drupal/better_exposed_filters": "^6.0.1",
+        "drupal/block_permissions": "^1.2.0",
+        "drupal/config_entity_reference_selection": "^2.0.1",
+        "drupal/cookies": "^1.1.0",
+        "drupal/core-composer-scaffold": "^9.5.0@beta",
+        "drupal/core-recommended": "^9.5.0@beta",
+        "drupal/double_field": "^4.0.0",
         "drupal/draggableviews": "^2.0.1",
-        "drupal/field_group": "^3.2",
-        "drupal/focal_point": "^1.5",
-        "drupal/geolocation": "^3.10",
-        "drupal/gin": "^3.0@beta",
-        "drupal/google_analytics": "^4.0",
-        "drupal/imageapi_optimize": "^4.0",
-        "drupal/imageapi_optimize_resmushit": "^2.0@beta",
-        "drupal/layout_paragraphs": "^2.0@beta",
-        "drupal/link_attributes": "^1.11",
-        "drupal/linkit": "^6.0@beta",
-        "drupal/menu_item_extras": "^2.17",
-        "drupal/metatag": "^1.19",
-        "drupal/migrate_plus": "^6.0",
-        "drupal/migrate_tools": "^6.0",
-        "drupal/paragraphs": "^1.14",
-        "drupal/pathauto": "^1.10",
-        "drupal/recaptcha": "^3.0",
-        "drupal/simple_sitemap": "^4.1",
-        "drupal/token": "^1.10",
-        "drupal/twig_field": "^1.1",
-        "drupal/twig_tweak": "^3.1",
-        "drupal/views_infinite_scroll": "^2.0",
-        "drupal/views_parity_row": "^1.12",
-        "drupal/webform": "^6.1",
-        "drush/drush": "^11.0",
+        "drupal/environment_indicator": "^4.0.10",
+        "drupal/field_group": "^3.2.0",
+        "drupal/focal_point": "^1.5.0",
+        "drupal/geolocation": "^3.10.0",
+        "drupal/gin": "^3.0.0@beta",
+        "drupal/google_analytics": "^4.0.2",
+        "drupal/honeypot": "^2.1.2",
+        "drupal/imageapi_optimize": "^4.0.0",
+        "drupal/imageapi_optimize_binaries": "^1.0.0@alpha",
+        "drupal/layout_paragraphs": "^2.0.1",
+        "drupal/link_attributes": "^1.11.0",
+        "drupal/linkit": "^6.0.0@beta",
+        "drupal/media_entity_download": "^2.1.0",
+        "drupal/menu_item_extras": "^2.17.0",
+        "drupal/metatag": "^1.21.0",
+        "drupal/migrate_plus": "^6.0.0",
+        "drupal/migrate_tools": "^6.0.0",
+        "drupal/paragraphs": "^1.15.0",
+        "drupal/pathauto": "^1.11.0",
+        "drupal/recaptcha": "^3.0.0",
+        "drupal/simple_sitemap": "^4.1.2",
+        "drupal/style_options": "^1.0.0@alpha",
+        "drupal/svg_image": "^1.16.0",
+        "drupal/token": "^1.11.0",
+        "drupal/twig_field": "^1.1.0",
+        "drupal/twig_tweak": "^3.1.3",
+        "drupal/views_infinite_scroll": "^2.0.0",
+        "drupal/views_parity_row": "^1.12.0",
+        "drupal/webform": "^6.1.3",
+        "drush/drush": "^11.1.1",
         "splidejs/splide": "^4.0.7",
-        "tristen/hoverintent": "^2.2.1"
+        "tristen/hoverintent": "^2.2.1",
+        "vlucas/phpdotenv": "^5.4.1"
     },
     "require-dev": {
-        "drupal/devel": "^4.1"
+        "dealerdirect/phpcodesniffer-composer-installer": "^0.7.2",
+        "drupal/coder": "^8.3.15",
+        "drupal/devel": "^4.1.5"
     },
     "conflict": {
         "drupal/drupal": "*"
@@ -126,8 +134,17 @@
         "allow-plugins": {
             "composer/installers": true,
             "cweagans/composer-patches": true,
-            "drupal/core-composer-scaffold": true
+            "drupal/core-composer-scaffold": true,
+            "dealerdirect/phpcodesniffer-composer-installer": true
         }
+    },
+    "autoload": {
+        "classmap": [
+            "scripts/composer/Scripts.php"
+        ],
+        "files": [
+            "load.environment.php"
+        ]
     },
     "extra": {
         "drupal-scaffold": {
@@ -178,5 +195,19 @@
                 "Support Linkit for link field - Issue 2712951": "https://www.drupal.org/files/issues/2022-02-09/2712951-274.patch"
             }
         }
+    },
+    "scripts": {
+        "post-install-cmd": [
+            "Webtourismus\\Composer\\Scripts::createDefaultFiles"
+        ],
+        "post-update-cmd": [
+            "Webtourismus\\Composer\\Scripts::createDefaultFiles"
+        ],
+        "post-drupal-scaffold-cmd": [
+            "patch -p1 <./scripts/scaffold/htaccess/.htaccess.patch"
+        ],
+        "install-drupal": [
+            "Webtourismus\\Composer\\Scripts::installDrupal"
+        ]
     }
 }
